[package]
name = "wasmfmt"
version = "0.1.0"
authors = ["philipahlberg <philipahlberg@gmail.com>"]
edition = "2018"
repository = "https://github.com/philipahlberg/wasmfmt"
documentation = "docs.rs/wasmfmt"
readme = "README.md"
license = "MIT"
categories = ["CLI", "WebAssembly"]
description = "A WebAssembly formatter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "utils",
]

[dependencies]
structopt = "0.3"
wast = "30.0"
itertools = "0.10"

[dev-dependencies]
criterion = "0.3"
unindent = "0.1"
assert_matches = "1.4"
pretty_assertions = "0.6"

[[bin]]
name = "wasmfmt"
path = "src/main.rs"

[[bench]]
name = "fmt"
harness = false
