[package]
name = "wasmfmt"
version = "0.2.1"
authors = ["philipahlberg <philipahlberg@gmail.com>"]
edition = "2018"
repository = "https://github.com/philipahlberg/wasmfmt"
homepage = "https://github.com/philipahlberg/wasmfmt"
documentation = "https://docs.rs/wasmfmt"
readme = "README.md"
license = "MIT"
categories = ["command-line-interface", "wasm"]
description = "A WebAssembly formatter"

[workspace]
members = [
    "utils",
]

[dependencies]
structopt = "0.3"
wast = "32.0"

[dev-dependencies]
criterion = "0.3"
unindent = "0.1"
assert_matches = "1.4"
pretty_assertions = "0.6"

[[bin]]
name = "wasmfmt"
path = "src/main.rs"

[[bench]]
name = "fmt"
harness = false
